--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,15 @@
     }
   ],
   "require": {
-    "php": "^7.2.5 || ^8.0",
+    "php": "^8.2",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.3 || ^7.0",
-    "nesbot/carbon": "^1.26.3 || ^2.0",
-    "predis/predis": "^1.1 || ^2.0",
-    "ramsey/uuid": "^3.7 || ^4.0",
-    "symfony/console": "^5.0 || ^6.0",
-    "symfony/event-dispatcher": "^5.0 || ^6.0",
-    "symfony/http-foundation": "^5.0.7 || ^6.0",
-    "symfony/mime": "^5.0.9 || ^6.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "nesbot/carbon": "^3.8.0",
+    "ramsey/uuid": "^4.0",
+    "symfony/console": "^7.0",
+    "symfony/event-dispatcher": "^7.0",
+    "symfony/http-foundation": "^7.0",
+    "symfony/mime": "^7.0"
   },
   "require-dev": {
     "ext-pcntl": "*",
